--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     }
   },
   "dependencies": {
-    "lodash": "*",
-    "moment": "2.15.0",
-    "nativescript-appversion": "1.2.0",
+    "lodash": "4.16.2",
+    "moment": "2.15.1",
+    "nativescript-appversion": "1.3.2",
     "nativescript-autocomplete": "1.0.0",
     "nativescript-cardview": "1.1.11",
-    "nativescript-drop-down": "1.3.2",
-    "nativescript-floatingactionbutton": "2.2.4",
-    "nativescript-google-analytics": "0.2.9",
-    "nativescript-plugin-firebase": "3.6.1",
+    "nativescript-drop-down": "1.3.3",
+    "nativescript-floatingactionbutton": "2.2.5",
+    "nativescript-google-analytics": "0.3.0",
+    "nativescript-plugin-firebase": "3.6.3",
     "tns-core-modules": "^2.3.0"
   },
   "devDependencies": {
@@ -30,6 +30,6 @@
     "gulp-jsonminify": "*",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "0.3.2",
-    "typescript": "2.0.0"
+    "typescript": "2.0.3"
   }
 }
