--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
   "dependencies": {
     "lodash": "4.16.2",
     "moment": "2.15.1",
-    "nativescript-appversion": "1.3.2",
-    "nativescript-autocomplete": "1.0.0",
-    "nativescript-cardview": "1.1.11",
-    "nativescript-drop-down": "1.3.3",
-    "nativescript-floatingactionbutton": "2.2.5",
-    "nativescript-google-analytics": "0.3.0",
-    "nativescript-plugin-firebase": "3.6.3",
-    "tns-core-modules": "^2.3.0"
+    "nativescript-plugin-firebase": "^3.6.3",
+    "nativescript-autocomplete": "^1.0.0",
+    "nativescript-drop-down": "^1.3.3",
+    "nativescript-floatingactionbutton": "^2.2.5",
+    "nativescript-appversion": "^1.3.2",
+    "nativescript-google-analytics": "^0.3.0",
+    "tns-core-modules": "2.3.0"
   },
   "devDependencies": {
-    "babel-traverse": "6.13.0",
-    "babel-types": "6.13.0",
-    "babylon": "6.9.0",
+    "babel-traverse": "6.16.0",
+    "babel-types": "6.16.0",
+    "babylon": "6.11.2",
     "filewalker": "0.1.3",
     "gulp": "*",
     "gulp-sass": "*",
