--- a/winenjoy.app.csproj
+++ b/winenjoy.app.csproj
@@ -246,13 +246,8 @@
     </Content>
     <Content Include="app\views\busy-indicator\busy-indicator.xml" />
     <Content Include="app\views\date-picker\date-picker.xml" />
-    <Content Include="app\views\edit-tasting\edit-tasting.css">
-      <DependentUpon>edit-tasting.scss</DependentUpon>
-    </Content>
-    <Content Include="app\views\edit-tasting\edit-tasting.js">
-      <DependentUpon>edit-tasting.ts</DependentUpon>
-    </Content>
-    <Content Include="app\views\edit-tasting\edit-tasting.xml">
+    <Content Include="app\views\edit-tasting-normal\edit-tasting-normal.xml" />
+    <Content Include="app\views\edit-tasting-full\edit-tasting-full.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="app\views\grouping-list-picker\grouping-list-picker.css">
@@ -371,7 +366,8 @@
     <TypeScriptCompile Include="app\view-models\main-view-model.ts" />
     <TypeScriptCompile Include="app\views\busy-indicator\busy-indicator.ts" />
     <TypeScriptCompile Include="app\views\date-picker\date-picker.ts" />
-    <TypeScriptCompile Include="app\views\edit-tasting\edit-tasting.ts" />
+    <TypeScriptCompile Include="app\views\edit-tasting-normal\edit-tasting-normal.ts" />
+    <TypeScriptCompile Include="app\views\edit-tasting-full\edit-tasting-full.ts" />
     <TypeScriptCompile Include="app\views\grouping-list-picker\grouping-list-picker.ts" />
     <TypeScriptCompile Include="app\views\import-export-data\import-export-data.ts" />
     <TypeScriptCompile Include="app\views\list-picker\list-picker.ts" />
@@ -392,7 +388,7 @@
     <Content Include="app\data\wine-criterias.json" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app\views\edit-tasting\edit-tasting.scss" />
+    <Content Include="app\views\edit-tasting-full\edit-tasting-full.scss" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="google-services.json" />
@@ -402,6 +398,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\fonts\BalooBhai-Regular.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="app\views\edit-tasting-normal\edit-tasting-normal.scss" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
